레이어팝업 닫기

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>step5 썸네일 클릭시 유튜브 영상 팝업 호출</title>
+	<title>step6 레이어팝업 닫기</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<script defer src="custom.js"></script>
