step7 팝업모양 설정

--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 	<script defer src="custom.js"></script>
 </head>
 <body>
-	<div id="vidGallery"></div>
+	<div id="vidGallery">
+		<!--
+		<article>
+			<a href="유튜브아이디">
+				<img src="유튜브 썸네일주소">
+			</a>
+			<div class="con">
+				<h2>영상제목</h2>
+				<p>영상본문</p>
+				<span>업로드 날짜</span>
+			</div>
+		</article>
+		-->
+	</div>
+
+	<!--
+	<div class="pop">
+		<iframe src="유튜브영상주소" frameborder="0"></iframe>
+		<span>닫기버튼</span>
+	</div>
+	-->
 </body>
 </html>
 
