step8 유튜브 데이터 함수처리 및 복수 플레이리스트 불러오기

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script defer src="custom.js"></script>
 </head>
 <body>
-	<div id="vidGallery">
+	<div class="vidGallery">
 		<!--
 		<article>
 			<a href="유튜브아이디">
@@ -23,6 +23,10 @@
 			</div>
 		</article>
 		-->
+	</div>
+
+	<div class="vidGallery2">
+
 	</div>
 
 	<!--
