--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>step6 레이어팝업 닫기</title>
+	<title>es5 prototype</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<script defer src="custom.js"></script>
+	<script>
+		$(document).ready(function(){
+			var vid1 = new Youtube();
+			
+		})
+	</script>
 </head>
 <body>
 	<div class="vidGallery">
