--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 	<script defer src="custom.js"></script>
 	<script>
 		$(document).ready(function(){
-			var vid1 = new Youtube();
+			var vid1 = new Youtube({
+				frame : ".vidGallery",
+				playList : "PLYOPkdUKSFgX5CgKf68RJzJHec0XEdBNd",
+				key : "AIzaSyCbARLbftvbPSX5cjABTy1LZpet3RVkrh4",	
+				num : 4	
+			});
 			
 		})
 	</script>
