step19 두번째 플레이리스트 생성

--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 	<script defer src="custom.js"></script>
 	<script>
 		$(document).ready(function(){
-			var vid1 = new Youtube({
+			 new Youtube({
 				frame : ".vidGallery",
 				playList : "PLYOPkdUKSFgX5CgKf68RJzJHec0XEdBNd",
 				key : "AIzaSyCbARLbftvbPSX5cjABTy1LZpet3RVkrh4",	
-				num : 3	
+				num : 4	
 			});
+
+			new Youtube({
+				frame : ".vidGallery2",
+				playList: "PLYOPkdUKSFgXiJXlCnCmIoeK_QReBgOlu",
+				key : "AIzaSyCbARLbftvbPSX5cjABTy1LZpet3RVkrh4",
+				num : 4
+			})
 			
 		})
 	</script>
